Add comprehensive documentation for Gateway features including process management, security, session management, SSE transport, team context, and MCP server installation
- Introduced detailed guides on Gateway Process Management, outlining persistent background processes, secure credential injection, and lifecycle management.
- Documented Gateway Security, covering credential storage, token security, network security, and best practices for secure operations.
- Added Session Management documentation, detailing cryptographically secure session handling and automatic cleanup processes.
- Implemented SSE Transport documentation, explaining the dual-endpoint architecture and message routing for VS Code compatibility.
- Clarified Team Context in Gateway CLI, emphasizing team-scoped operations and secure storage of team-specific configurations.
- Provided insights into MCP Server Installation, detailing the team-centered approach and security considerations for managing installations.

--- a/docs/development/backend/api-security.mdx
+++ b/docs/development/backend/api-security.mdx
@@ -148,7 +148,38 @@ requireTeamPermission('permission.name', getTeamIdFn) // Custom team ID extracti
 
 // Ownership-based authorization
 requireOwnershipOrAdmin(getUserIdFromRequest) // User owns resource OR is admin
+
+// Dual authentication (Cookie + OAuth2)
+requireAuthenticationAny()                    // Accept either cookie or OAuth2 Bearer token
+requireOAuthScope('scope.name')               // Enforce OAuth2 scope requirements
 ```
+
+### Dual Authentication Support
+
+For endpoints that support both web users (cookies) and CLI users (OAuth2 Bearer tokens), use the dual authentication middleware:
+
+```typescript
+import { requireAuthenticationAny, requireOAuthScope } from '../../middleware/oauthMiddleware';
+
+fastify.get('/dual-auth-endpoint', {
+  schema: {
+    security: [
+      { cookieAuth: [] },    // Cookie authentication
+      { bearerAuth: [] }     // OAuth2 Bearer token
+    ]
+  },
+  preValidation: [
+    requireAuthenticationAny(),     // Accept either auth method
+    requireOAuthScope('your:scope') // Enforce OAuth2 scope
+  ]
+}, async (request, reply) => {
+  // Endpoint accessible via both authentication methods
+  const authType = request.tokenPayload ? 'oauth2' : 'cookie';
+  const userId = request.user!.id;
+});
+```
+
+For detailed OAuth2 implementation, see the [OAuth Implementation Guide](./oauth.mdx) and [Security Policy](./security.mdx#oauth2-server-security).
 
 ### Team-Aware Permission System
 
