--- a/docs/development/gateway/index.mdx
+++ b/docs/development/gateway/index.mdx
@@ -10,24 +10,25 @@ import { Terminal, Code2, Settings, Shield, Zap, Users, Rocket } from 'lucide-re
 
 # DeployStack Gateway Development
 
-The DeployStack Gateway is the local secure proxy that connects developers to their team's MCP servers through a centralized control plane. It acts as a smart process manager and credential vault, automatically spawning MCP server processes on-demand while enforcing access policies from the cloud.
+The DeployStack Gateway is the local secure proxy that connects developers to their team's MCP servers through a centralized control plane. It acts as a smart process manager and credential vault, running MCP server processes as persistent background services while enforcing access policies from the cloud.
 
 ## Architecture Overview
 
-The Gateway implements a sophisticated Control Plane / Data Plane architecture:
+The Gateway implements a sophisticated Control Plane / Data Plane architecture with dual transport support:
 
 - **Control Plane**: Authenticates with `cloud.deploystack.io` to download team configurations and access policies
-- **Data Plane**: Manages local MCP server processes and proxies requests via stdio transport
+- **Data Plane**: Manages local MCP server processes with both stdio and SSE transport protocols
 - **Security Layer**: Injects credentials securely into process environments without exposing them to developers
+- **Session Management**: Handles secure SSE connections with cryptographic session IDs for VS Code compatibility
 
 ## Core Features
 
 <Cards>
   <Card 
     icon={<Terminal />} 
-    title="Process Management"
+    title="Dual Transport Support"
   >
-    Automatically spawns and manages MCP server processes on-demand using stdio transport
+    Supports both stdio transport for CLI tools and SSE transport for VS Code compatibility
   </Card>
   
   <Card 
@@ -39,16 +40,37 @@ The Gateway implements a sophisticated Control Plane / Data Plane architecture:
   
   <Card 
     icon={<Zap />} 
-    title="Unified Proxy"
+    title="Individual Tool Exposure"
   >
-    Single HTTP endpoint for all development tools (VS Code, Cursor, etc.)
+    Exposes individual MCP tools with namespacing (e.g., brightdata-search_engine) for direct use in development environments
   </Card>
   
   <Card 
     icon={<Users />} 
+    title="Session Management"
+  >
+    Cryptographically secure session handling with automatic cleanup for persistent connections
+  </Card>
+  
+  <Card 
+    icon={<Settings />} 
+    title="Unified Proxy"
+  >
+    Single HTTP endpoint supporting multiple client types with intelligent request routing
+  </Card>
+  
+  <Card 
+    icon={<Code2 />} 
     title="Team-Based Access"
   >
     Enforces team-based access control policies downloaded from the cloud control plane
+  </Card>
+  
+  <Card 
+    icon={<Rocket />} 
+    title="Tool Caching System"
+  >
+    Team-aware caching enables instant gateway startup and automatic tool discovery on team switching
   </Card>
 </Cards>
 
@@ -96,13 +118,30 @@ Manages the lifecycle of MCP server processes, including:
 - Environment variable injection
 
 ### HTTP Proxy Server
-Exposes the unified HTTP endpoint and routes requests to appropriate MCP server processes.
+Exposes dual endpoints for different client types:
+- **GET /sse**: SSE connection establishment for VS Code
+- **POST /message**: Session-based JSON-RPC for SSE clients
+
+### Session Manager
+Handles secure SSE connections with:
+- Cryptographically secure session ID generation
+- Session lifecycle management and cleanup
+- Connection state tracking and validation
+- Automatic timeout and resource management
+
+### Enterprise Management Layer
+Transforms MCP servers into enterprise governance tools:
+- Each MCP server appears as a toggleable tool
+- Enable/disable/status actions for operational control
+- Rich metadata from secure catalog integration
+- Team-based access policy enforcement
 
 ### Security Layer
 Ensures credentials are handled securely:
 - Encrypted storage of downloaded configurations
 - Secure environment variable injection
 - No credential exposure to developer environment
+- Session-based authentication for persistent connections
 
 ## Configuration Format
 
@@ -123,11 +162,14 @@ The Gateway works with MCP server configurations in this format:
 
 1. **Authentication**: Gateway authenticates with cloud control plane
 2. **Config Download**: Downloads team's MCP server configurations
-3. **HTTP Server**: Starts local HTTP server (default: `localhost:9095/mcp`)
-4. **Request Handling**: Receives MCP requests from development tools
-5. **Process Management**: Spawns required MCP server processes on-demand
-6. **Credential Injection**: Securely injects environment variables
-7. **Stdio Proxying**: Routes requests/responses via stdio transport
+3. **Persistent Process Startup**: Starts all configured MCP servers as background processes when gateway launches
+4. **HTTP Server**: Starts local HTTP server with SSE endpoints immediately available (default: `localhost:9095/sse`)
+5. **Request Handling**: Receives MCP requests from development tools and routes to already-running processes
+6. **Process Management**: Maintains persistent background processes as described in [Process Management](./process-management)
+7. **Credential Injection**: Securely injects environment variables into running processes at startup
+8. **Tool Routing**: Routes namespaced tool calls to persistent MCP servers via stdio transport
+
+For detailed information about the caching system, see [Caching System](./caching-system).
 
 ## Language Support
 
