--- a/docs/development/backend/security.mdx
+++ b/docs/development/backend/security.mdx
@@ -75,6 +75,38 @@ Sensitive global application settings (SMTP credentials, API keys, etc.) are enc
 
 This approach ensures that sensitive configuration data remains secure even if the database is compromised. The encryption system is separate from password hashing to maintain proper separation of concerns.
 
+## OAuth2 Server Security
+
+The OAuth2 server implementation follows RFC 6749 and RFC 7636 security standards for API access authentication.
+
+### PKCE (Proof Key for Code Exchange)
+- **Algorithm:** SHA256 code challenge method (RFC 7636)
+- **Code Verifier:** Cryptographically random 43-128 character string
+- **Code Challenge:** Base64URL-encoded SHA256 hash of code verifier
+- **Protection:** Prevents authorization code interception attacks
+
+### Token Security
+- **Access Tokens:** JWT format with 1-hour expiration
+- **Refresh Tokens:** Cryptographically random with 30-day expiration
+- **Token Storage:** Argon2 hashed in database (same parameters as passwords)
+- **Token Cleanup:** Automatic hourly cleanup of expired tokens
+- **Scope Validation:** Fine-grained permissions (`mcp:read`, `account:read`, `user:read`, `teams:read`, `offline_access`)
+
+### Authorization Flow Security
+- **State Parameter:** CSRF protection with cryptographically random state
+- **Client Validation:** Hardcoded client credentials for `deploystack-gateway-cli`
+- **Redirect URI Validation:** Whitelist of allowed callback URLs
+- **Consent Page:** User authorization with security warnings
+- **Session Binding:** OAuth2 flow requires active user session
+
+### Bearer Token Authentication
+- **Header Format:** `Authorization: Bearer <access_token>`
+- **Token Verification:** Constant-time comparison to prevent timing attacks
+- **Scope Enforcement:** Middleware validates required scopes per endpoint
+- **Dual Authentication:** Seamless support for both cookies and Bearer tokens
+
+For implementation details, see the [OAuth Implementation Guide](./oauth.mdx).
+
 ## Dependencies
 
 We strive to keep our dependencies up-to-date and regularly review them for known vulnerabilities. Automated tools may be used to scan for vulnerabilities in our dependency tree.
